# scrapegoodreads

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
explorations/: 005_webscraping-exploration.ipynb  010_infinte-scroll.ipynb  015_package-testing.ipynb  025_logging-in.ipynb  webscraping-exploration.ipynb
scrapegoodreads/: __init__.py  books.py  cli.py  configuration.py  exceptions.py  profile.py  utils.py  webscraping_helpers.py
tests/: conftest.py  test_books.py
